--- a/custom-home.html
+++ b/custom-home.html
@@ -252,7 +252,7 @@
         for (const i of bookmarkItems) {
           bookmarksHtml += `<div style="aspect-ratio: 1; width: 20ch"> \
             <a href="${i[0]}"> \
-              <img style="height: 100%; object-fit: contain" src="${i[1]}" /> \
+              <img style="height: 100%; object-fit: contain; border-radius: 8px" src="${i[1]}" /> \
             </a> \
           </div>`;
         }
